tests/syntax-error/nucleotide-count.ijs
nuc_cnt=: '' < NB. 'syntax error